--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
+                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ - Star+ - Combo+">
                     <button class="button">Assine Agora</button>
-                    <span class="text">R$ 45,90 por/mês*</span>
+                    <span class="text">R$ 55,90 por/mês*</span>
                 </li>
             </ul>
             <p class="text--small">
@@ -72,19 +72,19 @@
                 <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/desencantada.jpg" alt="desencantada">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/lobisomem.jpg" alt="lobisomem">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/sem_limites.jpg" alt="sem_limites">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="the sabta clauses">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/em_breve/willow.jpg" alt="willow">
             </li>
         </ul>
         <ul data-tab-id="populares" class="shows__list">
@@ -92,19 +92,19 @@
                 <img src="./dist/images/mais_populares/obi_wan.jpg" alt="Obi Wan">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/bluey.jpg" alt="bluey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="cavaleira da lua">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="O incrível Dr. Pol">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/red.jpg" alt="red">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="tudo igual SQN">
             </li>
         </ul>
         <ul data-tab-id="star_plus" class="shows__list">
@@ -112,19 +112,19 @@
                 <img src="./dist/images/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="Belair">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="NBA">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="os simpsons">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/premier_league.jpg" alt="premier league">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/images/em_breve/spidey.jpg" alt="spidey">
+                <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="the kardashians">
             </li>
         </ul>
     </section>
